[metadata]
name = fitsnake
author = Andrew Powers-Holmes
author_email = aholmes@omnom.net
maintainer = Andrew Powers-Holmes
maintainer_email = aholmes@omnom.net
license_files = LICENSE.md

[options]
python_requires = >=3.8
packages = find:
package_dir =
    =src
py_modules =
    fitsnake
include_package_data = True
install_requires =
    garmin-fit-sdk >= 0.94.3, < 0.95.0
    typer[all] >= 0.6.1, < 0.7.0
    openpyxl >= 3.0.10, < 3.1.0
    orjson >= 3.8.1, < 3.9.0

[options.packages.find]
where = src

[options.package_data]
    * = *.txt, *.md

[options.extras_require]
dev =
    black >= 22.3.0
    flake8 >= 4.0.1
    setuptools-scm >= 7.0.5
    mypy >= 0.981

[options.entry_points]
console_scripts =
    fitsnake = fitsnake.app:app

[flake8]
max-line-length = 110
ignore =
    F841 # variable assigned but not used; tedious during dev
    F401 # as is "imported module unused"
    E501 # line too long
    # black breaks these two rules:
    E203 # whitespace before :
    W503 # line break before binary operator
extend-exclude =
    .venv
